<resources>
    <string name="app_name">2Do 2Gether</string>

    <!-- General Strings -->
    <string name="email_address">E-mail Address&#8230;</string>
    <string name="enter">Enter</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="publish">Publish</string>
    <string name="accept">Accept</string>

    <!-- Login strings -->
    <string name="login"><b>Login</b></string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter password&#8230;</string>
    <string name="enter_password">Enter password&#8230;</string>
    <string name="enter_email">Enter e-mail&#8230;</string>
    <string name="create_password"><b>Create Password</b></string>
    <string name="create_account">Create Account</string>
    <string name="no_account"><u>Don\'t have an account?</u></string>
    <string name="create_new_account"><u>Create New Account</u></string>
    <string name="forgot_password"><u>Forgotten Password</u></string>
    <string name="forgot_password_prompt">Would you like a password reset email to be sent to your email address?</string>
    <string name="password_reset_successful">A password rest e-mail has been sent to your address.</string>
    <string name="email_not_verified">Your email address has not yet been verified.</string>
    <string name="create_account_successful">Your account has been created and a verification link has been sent to your email address, be sure to check spam folder.</string>

    <!-- To-Do strings -->
    <string name="to_do">2Do</string>
    <string name="important">Important</string>
    <string name="critical">Critical</string>
    <string name="created">Created:&#032;</string>
    <string name="completed_by">Completed By:&#032;</string>
    <string name="to_do_lists">2Do Lists</string>
    <string name="share_list">Share 2Do List</string>
    <string name="new_item_hint">New 2Do list item&#8230;</string>

    <!-- Checklist strings -->
    <string name="checklists">Checklists</string>
    <string name="checklists_hint">New checklist item&#8230;</string>
    <string name="new_checklist">Create new checklist</string>
    <string name="new_checklist_hint">Title of new checklist&#8230;</string>
    <string name="delete_checklist">Delete checklist</string>
    <string name="delete_checklist_description">Are you sure you want to delete this checklist?</string>
    <string name="publish_checklist">Publish checklist</string>
    <string name="publish_checklist_hint">Title of new 2Do list&#8230;</string>


    <!-- My Connections strings -->
    <string name="my_connections">My Connections</string>
    <string name="connections">Connections</string>
    <string name="connect">Connect</string>
    <string name="connect_self">Me</string>
    <string name="connect_existing">Connected</string>
    <string name="connection_requests">Connection Requests</string>
    <string name="no_connections">You have no connections</string>
    <string name="no_pending_connections">You have no connection requests</string>
    <string name="no_profile_found">No users found</string>
    <string name="connections_search_hint">Search for user\'s nicknames&#8230;</string>
    <string name="connection_request_submitted">Your connection request has been submitted</string>
    <string name="connections_user_not_public">Unable to search for new connections, user profile not public. This could be because you haven\'t populated your profile or because your settings are set to private.</string>


    <!-- My Profile strings -->
    <string name="my_profile">My Profile</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">Enter first name&#8230;</string>
    <string name="second_name">Second Name</string>
    <string name="second_name_hint">Enter second name&#8230;</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_hint">Enter nickname&#8230;</string>
    <string name="nickname_description">Your nickname is how your friends will find and connect with you. Make it unique.</string>
    <string name="nickname_error">User nicknames should be at least %1$d characters long with no spaces.</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_profile_picture"><u>Submit New Profile Picture</u></string>
    <string name="upload_profile_picture_success">Your new profile picture has been successfully updated.</string>
    <string name="upload_profile_details_success">Your profile details have been updated.</string>
    <string name="upload_profile_no_network">Cannot update profile picture without network connection.</string>

    <!-- Settings strings -->
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="logout">Logout</string>
    <string name="analytics">Analytics</string>
    <string name="notifications">Notifications</string>
    <string name="settings_analytics">Analytics Event</string>
    <string name="settings_analytics_description">Allow the developer to track key events to facilitate future development</string>
    <string name="settings_list_reorder">Reorder 2Do List Items </string>
    <string name="settings_list_reorder_description">Reorder 2Do lists so that completed items appear at the bottom</string>
    <string name="settings_discoverable">Profile Privacy</string>
    <string name="settings_discoverable_description">Make your profile public so you can connect with others</string>
    <string name="settings_notification_connection_request">Connection Requests</string>
    <string name="settings_notification_connection_request_description">Get notified when others request to connect with you</string>
    <string name="settings_notification_connection_request_result">New Connections</string>
    <string name="settings_notification_connection_request_result_description">Get notified when others accept your connection requests</string>
    <string name="settings_notification_new_list">New 2Do List</string>
    <string name="settings_notification_new_list_description">Get notified when you\'re added to a new 2Do list</string>

    <!-- Error Strings -->
    <string name="error_blank_email">Must provide E-mail Address.</string>
    <string name="error_blank_password">Must provide password.</string>
    <string name="error_missing_password">Must enter your new password in both fields.</string>
    <string name="error_missing_field">Please populate all fields.</string>
    <string name="error_password_mismatch">The two provided passwords do not match.</string>
    <string name="error_unknown">An unknown error occurred.</string>
    <string name="error_network">No network connection, cannot perform action.</string>
</resources>
