<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ViewFlipper
        android:id="@+id/myConnectionsViewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/myConnectionsMainView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connections"
                android:gravity="center"
                android:textSize="16sp"
                android:paddingBottom="16dp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/myConnectionsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/layout_container"
                android:padding="16dp">

            </android.support.v7.widget.RecyclerView>
            <TextView style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connection_requests"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="16dp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/pendingConnectionsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/layout_container"
                android:padding="16dp">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/myConnectionsSearchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">
                <EditText
                    android:id="@+id/myConnectionsSearchEt"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:background="@drawable/layout_edit_text"
                    android:hint="@string/connections_search_hint"/>
                <Button
                    android:id="@+id/searchBtn"
                    style="@style/TextViewStyle"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/layout_button"
                    android:text="@string/enter"
                    android:textAllCaps="false"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/myConnectionsSearchRv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/layout_container"
                android:layout_margin="16dp"
                android:padding="16dp"/>
        </LinearLayout>
    </ViewFlipper>

    <ProgressBar
        android:id="@+id/connectionsProgressSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:indeterminateTint="@color/blue_900"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/connectionsNoResultsFound"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/connections_no_users_found"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>